--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - OxleyCC IT</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./HTML Classwork/Picture5.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Picture5.png" type="image/x-icon">
     <script src="./main.js"></script>
 </head>
 
 <body>
     <div class="mobileBanner" id="mobileBanner">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" id="modBanImage"></a>
+        <a href="./index.html"><img src="./Picture5.png" id="modBanImage"></a>
     </div>
     <div class="header" id="menu">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" width="100px;"></a>
+        <a href="./index.html"><img src="./Picture5.png" width="100px;"></a>
         <a href="./index.html"><button id="homebtn" class="selected">Home</button></a>
         <a href="./7and8.html"><button id="seveig">7 & 8</button></a>
         <a href="./9and10.html"><button id="ninten">9 & 10</button></a>
@@ -28,7 +28,7 @@
 
     <div>
         <center>
-            <a href="./index.html"><img src="./HTML Classwork/Picture5.png"></a>
+            <a href="./index.html"><img src="./Picture5.png"></a>
             <h1 id="computerHeader" class="title">Information Technology (Senior School)</h1>
             <h1 id="mobileHeader1" class="title">Information Technology</h1>
             <h1 id="mobileHeader2" class="title">(Senior School)</h1>
@@ -53,11 +53,11 @@
             </p>
             <br><br>
             <div class="outline" style="width: 795px;">
-                <img src="./HTML Classwork/Picture6.png" height="200px;" id="schoolImage">
-                <img src="./HTML Classwork/Picture7.png" height="200px;" id="computerImage">
+                <img src="./Picture6.png" height="200px;" id="schoolImage">
+                <img src="./Picture7.png" height="200px;" id="computerImage">
             </div>
             <div id="mobileImage">
-                <img src="./HTML Classwork/Picture7.png" id="mobile-image">
+                <img src="./Picture7.png" id="mobile-image">
             </div>
         </center>
     </div>
