--- a/7and8.html
+++ b/7and8.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Year 7 & 8 - OxleyCC IT</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./HTML Classwork/Picture5.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Picture5.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="mobileBanner" id="mobileBanner">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" id="modBanImage"></a>
+        <a href="./index.html"><img src="./Picture5.png" id="modBanImage"></a>
     </div>
     <div id="menu" class="header">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" width="100px;"></a>
+        <a href="./index.html"><img src="./Picture5.png" width="100px;"></a>
         <a href="./index.html"><button id="buttonHeader">Home</button></a>
         <a href="./7and8.html"><button id="buttonHeader" class="selected">7 & 8</button></a>
         <a href="./9and10.html"><button id="buttonHeader">9 & 10</button></a>
@@ -28,7 +28,7 @@
     <div>
         <center>
             <!--<a href="./index.html"><img src="./HTML Classwork/Picture5.png"></a>-->
-            <a href="./index.html"><img src="./HTML Classwork/Picture5.png"></a>
+            <a href="./index.html"><img src="./Picture5.png"></a>
             <h1 id="title">Year 7 & 8 Information Technology</h1>
             <br><br>
             <div id="mobileMenu">
@@ -56,7 +56,7 @@
                     introduction of programming.
                 </p></td>
             </table>
-            <img src="./HTML Classwork/Picture1.png" style="height: 20%;width:20%;" id="computer">
+            <img src="./Picture1.png" style="height: 20%;width:20%;" id="computer">
         </center>
     </div>
 
