--- a/9and10.html
+++ b/9and10.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Year 9 & 10 - OxleyCC IT</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./HTML Classwork/Picture5.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Picture5.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="mobileBanner" id="mobileBanner">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" id="modBanImage"></a>
+        <a href="./index.html"><img src="./Picture5.png" id="modBanImage"></a>
     </div>
     <div id="menu" class="header">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" width="100px;"></a>
+        <a href="./index.html"><img src="./Picture5.png" width="100px;"></a>
         <a href="./index.html"><button id="buttonHeader">Home</button></a>
         <a href="./7and8.html"><button id="buttonHeader">7 & 8</button></a>
         <a href="./9and10.html"><button id="buttonHeader" class="selected">9 & 10</button></a>
@@ -26,7 +26,7 @@
     <div>
         <center>
             <!--<a href="./index.html"><img src="./HTML Classwork/Picture5.png"></a>-->
-            <a href="./index.html"><img src="./HTML Classwork/Picture5.png"></a>
+            <a href="./index.html"><img src="./Picture5.png"></a>
             <h1 id="title">Year 9 & 10 Information Technology</h1>
             <br><br><br><br>
             <div id="mobileMenu">
@@ -88,8 +88,8 @@
                     They will also explore the concepts behind programming and the tools for developing, testing and
                     publishing apps for computers and mobile devices.</td>
             </table>
-            <img src="./HTML Classwork/Picture2.png" height="200px;" id="compImage">
-            <img src="./HTML Classwork/Picture2.png" height="400px;" id="mobImage">
+            <img src="./Picture2.png" height="200px;" id="compImage">
+            <img src="./Picture2.png" height="400px;" id="mobImage">
         </center>
     </div>
 
