--- a/11and12.html
+++ b/11and12.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Year 11 & 12 - OxleyCC IT</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./HTML Classwork/Picture5.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Picture5.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="mobileBanner" id="mobileBanner">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" id="modBanImage"></a>
+        <a href="./index.html"><img src="./Picture5.png" id="modBanImage"></a>
     </div>
     <div class="header" id="menu">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" width="100px;"></a>
+        <a href="./index.html"><img src="./Picture5.png" width="100px;"></a>
         <a href="./index.html"><button id="buttonHeader">Home</button></a>
         <a href="./7and8.html"><button id="buttonHeader">7 & 8</button></a>
         <a href="./9and10.html"><button id="buttonHeader">9 & 10</button></a>
@@ -28,7 +28,7 @@
     <div>
         <center>
             <!--<a href="./index.html"><img src="./HTML Classwork/Picture5.png"></a>-->
-            <a href="./index.html"><img src="./HTML Classwork/Picture5.png"></a>
+            <a href="./index.html"><img src="./Picture5.png"></a>
             <h1 id="title">Year 11 & 12 Information Technology</h1>
             <br><br><br><br>
             <div id="mobileMenu">
@@ -81,9 +81,9 @@
                     met through the creation of designed<br>solutions within a networked environment while revisiting the four
                     stages of the problem-solving methodology.</td>
             </table>
-            <img src="./HTML Classwork/Picture3.png" height="100px" id="image3">
-            <img src="./HTML Classwork/Picture4.png" height="100px" id="compImage">
-            <img src="./HTML Classwork/Picture4.png" id="mobImage" class="eletweMobImg">
+            <img src="./Picture3.png" height="100px" id="image3">
+            <img src="./Picture4.png" height="100px" id="compImage">
+            <img src="./Picture4.png" id="mobImage" class="eletweMobImg">
         </center>
     </div>
 
