--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - OxleyCC IT</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./HTML Classwork/Picture5.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Picture5.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="mobileBanner" id="mobileBanner">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" id="modBanImage"></a>
+        <a href="./index.html"><img src="./Picture5.png" id="modBanImage"></a>
     </div>
     <div class="header" id="menu">
-        <a href="./index.html"><img src="./HTML Classwork/Picture5.png" width="100px;"></a>
+        <a href="./index.html"><img src="./Picture5.png" width="100px;"></a>
         <a href="./index.html"><button id="buttonHeader">Home</button></a>
         <a href="./7and8.html"><button id="buttonHeader">7 & 8</button></a>
         <a href="./9and10.html"><button id="buttonHeader">9 & 10</button></a>
@@ -27,7 +27,7 @@
 
     <div>
         <center>
-            <a href="./index.html"><img src="./HTML Classwork/Picture5.png"></a>
+            <a href="./index.html"><img src="./Picture5.png"></a>
             <h1 id="title">Contact</h1>
             <br>
             <div id="mobileMenu">
@@ -47,10 +47,10 @@
             <p>Please feel free to contact us on <b id="title2"><a href="mailto:admin@oxley.vic.edu.au">admin@oxley.vic.edu.au</a></b>, should you have any questions.</p>
             <br><br><br>
             <div class="outline" style="width: 1400px;">
-                <img src="./HTML Classwork/Picture3.png" height="200px;" id="compImage">
-                <img src="./HTML Classwork/Picture4.png" height="200px;" id="compImage2">
-                <img src="./HTML Classwork/Picture2.png" height="200px;" id="compImage3">
-                <img src="./HTML Classwork/Picture1.png" height="200px;" id="compImage4">
+                <img src="./Picture3.png" height="200px;" id="compImage">
+                <img src="./Picture4.png" height="200px;" id="compImage2">
+                <img src="./Picture2.png" height="200px;" id="compImage3">
+                <img src="./Picture1.png" height="200px;" id="compImage4">
                 <!--<img src="./HTML Classwork/Picture7.png" height="200px;">-->
             </div>
         </center>
