--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <center>
                     <br><br>
                     <a href="./index.html"><button id="mobButton" class="selected">Home</button></a>
-                    <a href="./7and8.html"><button id="mobButton">7 & 8</button></a><br>
+                    <a href="./7and8.html"><button id="mobButton">7 & 8</button></a><br><br>
                     <a href="./9and10.html"><button id="mobButton">9 & 10</button></a>
                     <a href="./11and12.html"><button id="mobButton">11 & 12</button></a>
                     <!--<a href="./contact.html"><button id="mobButton">Contact</button></a>-->
