--- a/9and10.html
+++ b/9and10.html
@@ -32,10 +32,10 @@
             <div id="mobileMenu">
                 <center>
                     <a href="./index.html"><button id="mobButton">Home</button></a>
-                    <a href="./7and8.html"><button id="mobButton">7 & 8</button></a>
+                    <a href="./7and8.html"><button id="mobButton">7 & 8</button></a><br><br>
                     <a href="./9and10.html"><button id="mobButton" class="selected">9 & 10</button></a>
                     <a href="./11and12.html"><button id="mobButton">11 & 12</button></a>
-                    <a href="./contact.html"><button id="mobButton">Contact</button></a>
+                    <!--<a href="./contact.html"><button id="mobButton">Contact</button></a>-->
                 </center>
             </div>
             <table>
