--- a/11and12.html
+++ b/11and12.html
@@ -17,10 +17,10 @@
     <div class="header" id="menu">
         <a href="./index.html"><img src="./Picture5.png" width="100px;"></a>
         <a href="./index.html"><button id="buttonHeader">Home</button></a>
-        <a href="./7and8.html"><button id="buttonHeader">7 & 8</button></a>
+        <a href="./7and8.html"><button id="buttonHeader">7 & 8</button></a><br><br>
         <a href="./9and10.html"><button id="buttonHeader">9 & 10</button></a>
         <a href="./11and12.html"><button id="buttonHeader" class="selected">11 & 12</button></a>
-        <a href="./contact.html"><button id="contact">Contact</button></a>
+        <!--<a href="./contact.html"><button id="contact">Contact</button></a>-->
     </div>
 
     <p><br></p>
