--- a/11and12.html
+++ b/11and12.html
@@ -20,7 +20,7 @@
         <a href="./7and8.html"><button id="buttonHeader">7 & 8</button></a>
         <a href="./9and10.html"><button id="buttonHeader">9 & 10</button></a>
         <a href="./11and12.html"><button id="buttonHeader" class="selected">11 & 12</button></a>
-        <<a href="./contact.html"><button id="contact">Contact</button></a>
+        <a href="./contact.html"><button id="contact">Contact</button></a>
     </div>
 
     <p><br></p>
