--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         </center>
     </div>
 
+    <!-- Google Adsence Code -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5327146535138725" crossorigin="anonymous"></script>
+    
+    
     <script>
         var menu = document.getElementById("menu")
         var schoolImage = document.getElementById("schoolImage")
