--- a/7and8.html
+++ b/7and8.html
@@ -8,6 +8,7 @@
     <title>Year 7 & 8 - OxleyCC IT</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./Picture5.png" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5327146535138725" crossorigin="anonymous"></script>
 </head>
 
 <body>
