Ads in 9and10.html

--- a/9and10.html
+++ b/9and10.html
@@ -67,6 +67,12 @@
                     During this course, students will use online editing tool to create a number of websites and publish
                     them online.<br><br><br>
                     
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5327146535138725" crossorigin="anonymous"></script>
+                    <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-5327146535138725" data-ad-slot="7418350973" </ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                    
                     <b id="title">YEAR 10</b><br>
                     Year 10 students can choose one or both of the semester-long IT subjects.<br>
                     Computer Science Discoveries links to Units 3 and 4 IT Informatics while Game and App Development links
