--- a/9and10.html
+++ b/9and10.html
@@ -72,7 +72,7 @@
                     <script>
                          (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-                    
+                    <ins class="normal" style="display:inline; text-align:left;"</ins>
                     <b id="title">YEAR 10</b><br>
                     Year 10 students can choose one or both of the semester-long IT subjects.<br>
                     Computer Science Discoveries links to Units 3 and 4 IT Informatics while Game and App Development links
