--- a/11and12.html
+++ b/11and12.html
@@ -82,6 +82,18 @@
                     met through the creation of designed<br>solutions within a networked environment while revisiting the four
                     stages of the problem-solving methodology.</td>
             </table>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5327146535138725"
+                 crossorigin="anonymous"></script>
+            <!-- Some Kind of Square -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-5327146535138725"
+                 data-ad-slot="7258583238"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <img src="./Picture3.png" height="100px" id="image3">
             <img src="./Picture4.png" height="100px" id="compImage">
             <img src="./Picture4.png" id="mobImage" class="eletweMobImg">
