--- a/index.html
+++ b/index.html
@@ -40,4 +40,10 @@
     <script>
         document.getElementById("web").innerHTML = window.location.href
     </script>
+
+    <script>
+        if(window.location.href = "https://drageno01.github.io/?notepad"){
+            window.location.replace("https://drageno01.github.io/projects/sideprojects/notepad.html")
+        }
+    </script>
 </html>
