--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
         if(window.location.href = "https://drageno01.github.io/?notepad"){
             window.location.replace("https://drageno01.github.io/projects/sideprojects/notepad.html")
         }
+        if(window.location.href = "https://drageno01.github.io/?articles"){
+            window.location.replace("https://drageno01.github.io/articles/index.html")
+        }
     </script>
 </html>
