--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
     </script>
 
     <script>
-        if(window.location.href == "https://drageno01.github.io/?notepad" || window.location.href == "https://drageno01.github.com?notepad"){
-            window.location.replace("https://drageno01.github.io/projects/sideprojects/notepad.html")
-        }
-        if(window.location.href == "https://drageno01.github.io/?articles" || window.location.href == "https://drageno01.github.com?articles"){
-            window.location.replace("https://drageno01.github.io/articles/index.html")
+        if(window.location.href != "https://drageno01.github.io/"){
+            if(window.location.href == "https://drageno01.github.io/?notepad"){
+                window.location.replace("https://drageno01.github.io/projects/sideprojects/notepad.html")
+            }
+            if(window.location.href == "https://drageno01.github.io/?articles"){
+                window.location.replace("https://drageno01.github.io/articles/index.html")
+            }
         }
     </script>
 </html>
