--- a/projects/sideprojects/notepad.html
+++ b/projects/sideprojects/notepad.html
@@ -261,6 +261,10 @@ The text you enter will appear directly within the box as you type."></textarea>
         // }
         // }
     </script>
+
+    <script>
+        window.history.pushState("pageTitle", "Online Notpad", "/notepad");
+    </script>
 </body>
 
 </html>
