--- a/index.html
+++ b/index.html
@@ -33,9 +33,31 @@
 <body>
     <br><br><br><br><br>
     <center style="color: white;">
-        <h1>Oh dear...</h1>
-        <p>It seems like you got the wrong link address. Check the link address.</p>
+        <h1 id="title">WELCOME</h1>
+        <p>What is this site?</p>
+        <table border="1" style="text-align: center; width: 40%;background-color: #373737;">
+            <tr>
+                <th style="width: 50%; font-family: '',cursive;"><h2>Question</h2></th>
+                <th style="width: 50%; font-family: '',cursive;"><h2>Answer</h2></th>
+            </tr>
+            <tr>
+                <td><p>What is this website?</p></td>
+                <td><p>This is the GitHub page for DRAGEno01.</p></td>
+            </tr>
+            <tr>
+                <td><p>What is this website used for?</p></td>
+                <td><p>To share and view projects.</p></td>
+            </tr>
+            <tr>
+                <td><p>What project can I view now?</p></td>
+                <td><p>Try this notepad <a href="?notepad">here</a>.</p></td>
+            </tr>
+        </table>
+        <br><br>
         <p>You are on: <i id="web"></i></p>
+        <br>
+        <p>What does that mean above this text?</p>
+        <p>It means that you are not on a page that has a project on it.<br>Please change the webaddress to view my work.</p>
     </center>
     <script>
         document.getElementById("web").innerHTML = window.location.href
