--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Kenia&family=Lilita+One&family=Notable&display=swap');
         body {
             background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
             background-size: 400% 400%;
@@ -26,6 +27,11 @@
             100% {
                 background-position: 0% 50%;
             }
+        }
+
+        #title {
+            font-family: 'Lilita One',cursive;
+            font-size: 50px;
         }
     </style>
 </head>
