--- a/projects/sideprojects/notepad.html
+++ b/projects/sideprojects/notepad.html
@@ -234,7 +234,7 @@ The text you enter will appear directly within the box as you type."></textarea>
             var fileName = document.getElementById("filename")
             var filenamegiven = fileName.value
             if(filenamegiven === ""){
-                filenamegiven = "onlineNotepad-download"
+                filenamegiven = "drageno01.github.io?download"
             }
             saveTextAsFile(notepad.value,filenamegiven+".txt")
         }
