--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
             if(window.location.href == "https://drageno01.github.io/?articles" || window.location.href == "https://drageno01.github.io/#articles"){
                 window.location.replace("https://drageno01.github.io/articles/index.html")
             }
+            if(window.location.href == "https://drageno01.github.io/?articleLogin" || window.location.href == "https://drageno01.github.io/#articleLogin"){
+                window.location.replace("https://drageno01.github.io/articles/index.html")
         }
     </script>
 </html>
