--- a/projects/sideprojects/logintemplate.html
+++ b/projects/sideprojects/logintemplate.html
@@ -115,7 +115,7 @@
             <p class="signup">Sign Up</p>
         </div>
     </center>
-    <script>
+<!--     <script>
         if(window.location.href != "https://drageno01.github.io/"){
             if(window.location.href == "https://drageno01.github.io/?notepad" || window.location.href == "https://drageno01.github.io/#notepad"){
                 window.location.replace("https://drageno01.github.io/projects/sideprojects/notepad.html")
@@ -127,9 +127,9 @@
                 window.location.replace("https://drageno01.github.io/articles/index.html")
             }
         }
-    </script>
+    </script> -->
 
-    <script>
+<!--     <script>
         let username = document.getElementById("username")
         let password = document.getElementById("password")
         let loginStatus = getCookie("username")
@@ -154,5 +154,5 @@
             // }
             alert("Logged in.")
         }
-    </script>
+    </script> -->
 </html>
