--- a/projects/sideprojects/auth/home.html
+++ b/projects/sideprojects/auth/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <button onclick="logout()">Logout</button>
-    <script>
+<!--     <script>
         let loginStatus = getCookie("username")
 
         if(loginStatus === undefined){
@@ -24,6 +24,6 @@
             const parts = value.split(`; ${name}=`);
             if (parts.length === 2) return parts.pop().split(';').shift();
         }
-    </script>
+    </script> -->
 </body>
 </html>
