--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
             if(window.location.href == "https://drageno01.github.io/?articleLogin" || window.location.href == "https://drageno01.github.io/#articleLogin"){
                 window.location.replace("https://drageno01.github.io/articles/index.html")
             }
+            if(window.location.href == "https://drageno01.github.io/?oxley" || window.location.href == "https://drageno01.github.io/#oxley"){
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html")
+            }
         }
     </script>
 </html>
