--- a/projects/sideprojects/notepad.html
+++ b/projects/sideprojects/notepad.html
@@ -360,7 +360,19 @@ The text you enter will appear directly within the box as you type." onchange="s
         window.history.pushState("pageTitle", "Online Notpad", "/?notepad");
     </script>
 
-
+    <script>
+        window.onbeforeunload = function (e) {
+            e = e || window.event;
+        
+            // For IE and Firefox prior to version 4
+            if (e) {
+                e.returnValue = 'Sure?';
+            }
+        
+            // For Safari
+            return 'Sure?';
+        };
+    </script>
 
 </body>
 </html>
